--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ img {
 	height:44.38px;
 	padding:0px;
 }
+/*.ui-btn {
+	max-height: 44px;
+	padding:10px 40px 10px 50px;
+/*}*/
 .btnAC.active {
     background-color: #FFA500;
     color: #fff;
